--- a/.babelrc
+++ b/.babelrc
@@ -1,7 +1,9 @@
 {
+  "parserOpts": { 
+    "allowReturnOutsideFunction": true
+  }
   "plugins": [
     "transform-es2015-modules-commonjs",
     "transform-async-to-generator",
-    [ "parser-opts", { "allowReturnOutsideFunction": true } ]
   ]
 }
